Fixed header z-index problem.

--- a/plonetheme/onegov/resources/css/main.css
+++ b/plonetheme/onegov/resources/css/main.css
@@ -219,7 +219,7 @@ a,
 /* @group header */
 #header {
   position: relative;
-  z-index: 2; }
+  z-index: 3; }
 
 .logoRow {
   min-height: 6em; }
