--- a/plonetheme/onegov/resources/sass/components/base.scss
+++ b/plonetheme/onegov/resources/sass/components/base.scss
@@ -102,7 +102,7 @@ a,
 
 #header {
   position: relative;
-  z-index: 2;
+  z-index: 3;
 }
 .logoRow {
   min-height: 6em;
